Bssines Bankrupt data set - 5year.arff data file includ

--- a/Business Classification.ipynb
+++ b/Business Classification.ipynb
@@ -43,6 +43,7 @@
    "outputs": [],
    "source": [
     "# Reading the Jason File\n",
+    "# encoding is important: standard UTF8\n",
     "data = [json.loads(line) for line in open('business.json', 'r',encoding='utf8')]"
    ]
   },
@@ -693,7 +694,7 @@
     "Metric: \n",
     "\n",
     "$$\n",
-    "    \\frac{\\sum_{i=1}^N \\text{correct predictions}}{N}\n",
+    "    \\frac{\\sum_{i=1}^N \\text{correct predictions}}{\\text{Total Predictions}}\n",
     "$$"
    ]
   },
@@ -737,7 +738,6 @@
    ],
    "source": [
     "# Sklear Score\n",
-    "\n",
     "model.score(X_test,y_test)"
    ]
   },
@@ -771,6 +771,48 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -789,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
