Data set and plots

--- a/Business Classification.ipynb
+++ b/Business Classification.ipynb
@@ -7,6 +7,8 @@
     "# Business Classification\n",
     "\n",
     "\n",
+    "Github link: [https://github.com/srivasb/Business_Classification].\n",
+    "\n",
     "\n",
     "Sample code for Testing the **Logistic Regression** function from the *Sklearn* library.\n",
     "\n",
@@ -5712,65 +5714,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Conclusion:\n",
+    "## Conclusion:\n",
     "\n",
     "Because there is a equivanly distribution of the off-set values from the **review count** column, the results are nort affecter; yet, the reduction in the data set may improve time for processing the model"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Nearest Neighbors\n",
-    "\n",
-    "#### Documentation\n",
-    "\n",
-    "* https://scikit-learn.org/stable/modules/neighbors.html#classification\n",
-    "* https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
